This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

13-Mar-2005 (Lars Duening)  (3.3.687)
  - (main, backend.c, heartbeat.c) The ALARM_TIME and HEART_BEAT_INTERVAL
        time are now configurable at compile and start time (based on
        a patch by Gnomi).

12-Mar-2005 (Lars Duening)  (3.3.686)
  - (func_spec, object.c) The efun tell_object() can now take an array,
        mapping, struct or object as second argument, calling catch_msg() in
        the target in that case (Bug #0000354).
  - (func_spec, object.c) The efuns tell_room() and say() can now take a
        mapping, object or struct instead of an array as second argument for
        the catch_msg() mechanism.

09-Mar-2005 (Lars Duening)  (3.3.685)
  - (mapping.c) The hash/hybrid statistics were somewhat off.
  - (gcollect, backend.c, simulate.c) The default time interval for
      a data cleanup is now available as macro in gcollect.h . And
      since we have that time interval, the number-to-process limit
      in process_objects() didn't make much sense anymore.

06-Mar-2005 (Lars Duening)  (3.3.684)
  - (slaballoc.c) Tuned the allocator: the partially-used slab lists
      are now lazily order for better usage.
  - (interpret.c) For an uncallable closure, the code forgot to clean
      out the CSP before throwing the error (Bug #0000374).
  - (doc/efun/snoop) Corrected the description of the return value (Bug
      #0000372).

26-Feb-2005 (Lars Duening)  (3.3.683)
  - (efuns.c) regreplace() didn't update the stack pointers properly,
      causing crashes down the road (reported by Bardioc).

25-Feb-2005 (Lars Duening)  (3.3.682)
  - (mapping.c) Indexing a mapping with strings didn't quite work yet: the
      hash computation didn't take into effect that strings are no longer
      tabled just to use them as rvalue indices.
  - (simulate.c) If a callback didn't have a valid object associated with