@@ -2,11 +2,12 @@ SYNOPSIS
         int set_heart_beat(int flag);
 
 BESCHREIBUNG
-        Schaltet den Heartbeat ein oder aus. Der Treiber wendet die Lfun
-        heart_beat() auf das aktuelle Objekt alle zwei Sekunden an, wenn der
-        Heartbeat eingeschaltet ist.
-        Der Heartbeat sollte immer ausgeschaltet werden, wenn er nicht
-        gebraucht wird. Das reduziert die Systemauslastung.
+        Schaltet den Heartbeat ein oder aus. Der Treiber wendet die
+        Lfun heart_beat() auf das aktuelle Objekt alle
+        __HEARTBEAT_INTERVAL__ Sekunden an, wenn der Heartbeat
+        eingeschaltet ist.  Der Heartbeat sollte immer ausgeschaltet
+        werden, wenn er nicht gebraucht wird. Das reduziert die
+        Systemauslastung.
 
         Liefert 'wahr' bei Erfolg, 'falsch' bei Fehler.
 
