@@ -2,10 +2,11 @@ SYNOPSIS
         int set_heart_beat(int flag)
 
 DESCRIPTION
-        Enable or disable heart beat. The driver will apply
-        the lfun heart_beat() to the current object every 2 seconds,
-        if it is enabled. If the heart beat is not needed for the
-        moment, then do disable it. This will reduce system overhead.
+        Enable or disable heart beat. The driver will apply the lfun
+        heart_beat() to the current object every
+        __HEARTBEAT_INTERVAL__ seconds, if it is enabled. If the heart
+        beat is not needed for the moment, then do disable it. This
+        will reduce system overhead.
 
         Return true for success, and false for failure.
 
