@@ -54,17 +54,15 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 687)
-(Parent-Version lpmud 3-3 686)
+(Project-Version lpmud 3-3 688)
+(Parent-Version lpmud 3-3 687)
 (Version-Log "
-  - (main, backend.c, heartbeat.c) The ALARM_TIME and HEART_BEAT_INTERVAL
-        time are now configurable at compile and start time (based on
-        a patch by Gnomi).
+  - (backend.c) The synchronous heartbeat timing wasn't initialised properly.
 ")
 (New-Version-Log 
 ""
 )
-(Checkin-Time "Sun, 13 Mar 2005 01:01:30 -0700")
+(Checkin-Time "Thu, 17 Mar 2005 21:30:22 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -102,7 +100,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.12 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.86 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.750 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.751 644))
   (HISTORY (lpmud/f/49_HISTORY 1.385.1.21 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.21 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -165,7 +163,7 @@
   (src/array.h (lpmud/f/47_array.h 1.18.1.22 644))
   (src/array.c (lpmud/d/12_array.c 1.46.1.47.1.22 644))
   (src/backend.h (lpmud/f/46_backend.h 1.20.1.8 644))
-  (src/backend.c (lpmud/d/6_backend.c 1.68.1.35.1.47 644))
+  (src/backend.c (lpmud/d/6_backend.c 1.68.1.35.1.48 644))
   (src/bitstrings.h (lpmud/i/47_bitstrings 1.3 644))
   (src/bitstrings.c (lpmud/i/48_bitstrings 1.16 644))
   (src/bytecode.h (lpmud/a/b/26_bytecode.h 1.1.1.3 644))
@@ -191,7 +189,7 @@
   (src/hash.h (lpmud/f/32_hash.h 1.6 644))
   (src/hash.c (lpmud/c/28_hash.c 1.17 644))
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.5 644))
-  (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.10 644))
+  (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.11 644))
   (src/i-svalue_cmp.h (lpmud/a/b/20_i-svalue_c 1.5 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.41 644))
   (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.92 644))
@@ -212,8 +210,8 @@
   (src/my-alloca.h (lpmud/f/29_my-alloca. 1.3.1.2 644))
   (src/my-rusage.h (lpmud/f/28_my-rusage. 1.7 644))
   (src/my-stdint.h (lpmud/u/b/39_my-stdint. 1.2 644))
-  (src/object.h (lpmud/44_object.h 1.34.1.19.1.6.1.5 644))
-  (src/object.c (lpmud/45_object.c 1.62.1.88.1.53.1.7 644))
+  (src/object.h (lpmud/44_object.h 1.34.1.19.1.6.1.6 644))
+  (src/object.c (lpmud/45_object.c 1.62.1.88.1.53.1.8 644))
   (src/otable.h (lpmud/f/27_otable.h 1.8.1.4 644))
   (src/otable.c (lpmud/43_otable.c 1.22.1.8 644))
   (src/parser.c (lpmud/l/13_parser.c 1.1 644))
@@ -444,7 +442,7 @@
   (src/util/indent/Makefile.in (lpmud/17_Makefile 1.5.1.1 644))
   (src/util/indent/wrapper (lpmud/d/25_wrapper 1.1 644))
 
-  (src/util/erq/Makefile.in (lpmud/c/11_Makefile.i 1.1.1.5 644))
+  (src/util/erq/Makefile.in (lpmud/c/11_Makefile.i 1.1.1.6 644))
   (src/util/erq/erq.h (lpmud/d/26_erq.h 1.1.1.4.1.2 644))
   (src/util/erq/erq.c (lpmud/d/27_erq.c 1.1.1.8.1.6.1.4.1.8 644))
 
@@ -849,7 +847,7 @@
   (doc/efun/set_environment (lpmud/l/4_set_enviro 1.3 644))
   (doc/efun/set_extra_wizinfo (lpmud/q/11_set_extra_ 1.4 644))
   (doc/efun/set_extra_wizinfo_size (lpmud/q/12_set_extra_ 1.3 644))
-  (doc/efun/set_heart_beat (lpmud/q/13_set_heart_ 1.6 644))
+  (doc/efun/set_heart_beat (lpmud/q/13_set_heart_ 1.7 644))
   (doc/efun/set_is_wizard (lpmud/q/14_set_is_wiz 1.3 644))
   (doc/efun/set_light (lpmud/q/15_set_light 1.4 644))
   (doc/efun/set_limits (lpmud/d/36_set_limits 1.6 644))
@@ -999,7 +997,7 @@
   (doc/efun.de/set_limits.de (lpmud/g/b/16_set_limits 1.3 640))
   (doc/efun.de/set_light.de (lpmud/g/b/17_set_light. 1.2 640))
   (doc/efun.de/set_is_wizard.de (lpmud/g/b/18_set_is_wiz 1.1 640))
-  (doc/efun.de/set_heart_beat.de (lpmud/g/b/19_set_heart_ 1.1 640))
+  (doc/efun.de/set_heart_beat.de (lpmud/g/b/19_set_heart_ 1.2 640))
   (doc/efun.de/set_extra_wizinfo.de (lpmud/g/b/20_set_extra_ 1.3 640))
   (doc/efun.de/set_extra_wizinfo_size.de (lpmud/g/b/21_set_extra_ 1.1 640))
   (doc/efun.de/set_environment.de (lpmud/g/b/22_set_enviro 1.2 640))
